quil-rs/src/program/latex/snapshots/quil_rs__program__latex__tests__modifiers__modifier_toffoli_gate.snap
---
source: src/program/latex/mod.rs
assertion_line: 750
expression: "r#\"\\documentclass[convert={density=300,outext=.png}]{standalone}\n\\usepackage[margin=1in]{geometry}\n\\usepackage{tikz}\n\\usetikzlibrary{quantikz}\n\\begin{document}\n\\begin{tikzcd}\n\\lstick{\\ket{q_{0}}} & \\targ{} & \\qw \\\\\n\\lstick{\\ket{q_{1}}} & \\ctrl{-1} & \\qw \\\\\n\\lstick{\\ket{q_{2}}} & \\ctrl{-2} & \\qw\n\\end{tikzcd}\n\\end{document}\"#"
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}
\lstick{\ket{q_{0}}} & \targ{} & \qw \\
\lstick{\ket{q_{1}}} & \ctrl{-1} & \qw \\
\lstick{\ket{q_{2}}} & \ctrl{-2} & \qw
\end{tikzcd}
\end{document}
